--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="script.js" defer></script>
     <title>Match Two Cards</title>
 </head>
 <body>
-    
+    <h1>Match Two Cards</h1>
 </body>
 </html>
