Create the base of the game in html.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
 </head>
 <body>
     <h1>Match Two Cards</h1>
+    <div class="card" data-id="1">1</div>
+    <div class="card" data-id="2">2</div>
+    <div class="card" data-id="3">3</div>
+    <div class="card" data-id="4">4</div>
+    <div class="card" data-id="5">5</div>
+    <div class="card" data-id="6">6</div>
+    <div class="card" data-id="7">7</div>
+    <div class="card" data-id="8">8</div>
+    <div class="card" data-id="1">1</div>
+    <div class="card" data-id="2">2</div>
+    <div class="card" data-id="3">3</div>
+    <div class="card" data-id="4">4</div>
+    <div class="card" data-id="5">5</div>
+    <div class="card" data-id="6">6</div>
+    <div class="card" data-id="7">7</div>
+    <div class="card" data-id="8">8</div>
 </body>
 </html>
