Add image to the bar webpage

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="script.js" defer></script>
-    <title>Match Two Cards</title>
+    <script src="https://kit.fontawesome.com/eda0f92437.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="assets/images/favicon.png" type="image/png">
+   <title>Match Two Cards</title>
 </head>
 <body>
     <h1>Match Two Cards</h1>
+
+    <button id="ngb">New Game</button>
+
+    <div class="cardbox">
+       
     <div class="card" data-id="1">1</div>
     <div class="card" data-id="2">2</div>
     <div class="card" data-id="3">3</div>
@@ -25,5 +32,7 @@
     <div class="card" data-id="6">6</div>
     <div class="card" data-id="7">7</div>
     <div class="card" data-id="8">8</div>
+    </div>
+
 </body>
 </html>
