--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/eda0f92437.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/png">
    <title>Match Two Cards</title>
 </head>
 <body>
