Create score box

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <h1>Match Two Cards</h1>
 
     <button id="ngb">New Game</button>
+    <div class="score-box">
+        Score: <spam id="score">0</spam>
+    </div>
 
     <div class="cardbox">
        
