--- a/index.html
+++ b/index.html
@@ -19,22 +19,54 @@
 
     <div class="cardbox">
        
-    <div class="card" data-id="1">1</div>
-    <div class="card" data-id="2">2</div>
-    <div class="card" data-id="3">3</div>
-    <div class="card" data-id="4">4</div>
-    <div class="card" data-id="5">5</div>
-    <div class="card" data-id="6">6</div>
-    <div class="card" data-id="7">7</div>
-    <div class="card" data-id="8">8</div>
-    <div class="card" data-id="1">1</div>
-    <div class="card" data-id="2">2</div>
-    <div class="card" data-id="3">3</div>
-    <div class="card" data-id="4">4</div>
-    <div class="card" data-id="5">5</div>
-    <div class="card" data-id="6">6</div>
-    <div class="card" data-id="7">7</div>
-    <div class="card" data-id="8">8</div>
+    <div class="card" data-id="1">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 1" class="card-back">
+       </div>
+    <div class="card" data-id="2">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+    </div>
+    <div class="card" data-id="3">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+    </div>
+    <div class="card" data-id="4">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+    </div>
+    <div class="card" data-id="5">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+    </div>
+    <div class="card" data-id="6">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+    </div>
+    <div class="card" data-id="7">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+    </div>
+    <div class="card" data-id="8">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+    </div>
+    <div class="card" data-id="1">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 1" class="card-back">
+    </div>
+    <div class="card" data-id="2">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+    </div>
+    <div class="card" data-id="3">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+    </div>
+    <div class="card" data-id="4">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+    </div>
+    <div class="card" data-id="5">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+    </div>
+    <div class="card" data-id="6">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+    </div>
+    <div class="card" data-id="7">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+    </div>
+    <div class="card" data-id="8">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+    </div>
     </div>
 
 </body>
