Add java to test the flip of the cards. Create the CSS styles when flipped.

--- a/index.html
+++ b/index.html
@@ -20,52 +20,132 @@
     <div class="cardbox">
        
     <div class="card" data-id="1">
+        <div class="card-flip">
+        <div class="card-back">
         <img src="assets/images/cardbacksideedit.jpg" alt="Card 1" class="card-back">
+        </div>
+        <div class="card-front"></div>
+        </div>
        </div>
     <div class="card" data-id="2">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="3">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="4">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="5">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="6">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="7">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="8">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="1">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 1" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 1" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="2">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="3">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="4">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="5">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="6">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="7">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     <div class="card" data-id="8">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+        <div class="card-flip">
+            <div class="card-back">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+            </div>
+            <div class="card-front"></div>
+            </div>
     </div>
     </div>
 
