--- a/index.html
+++ b/index.html
@@ -20,131 +20,163 @@
     <div class="cardbox">
        
     <div class="card" data-id="1">
-        <div class="card-flip">
-        <div class="card-back">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 1" class="card-back">
+        <div class="card-inner">
+        <div class="card-front">
+        <img src="assets/images/cardbacksideedit.jpg" alt="Card 1">
         </div>
-        <div class="card-front"></div>
+        <div class="card-back">
+            <img src="assets/images/gohan1.jpg" alt="Card 1">
+        </div>
         </div>
        </div>
     <div class="card" data-id="2">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku1.jpg" alt="Card 2">
+            </div>
             </div>
     </div>
     <div class="card" data-id="3">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku2.jpg" alt="Card 3">
+            </div>
             </div>
     </div>
     <div class="card" data-id="4">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku3.jpg" alt="Card 4">
+            </div>
             </div>
     </div>
     <div class="card" data-id="5">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku4.jpg" alt="Card 5">
+            </div>
             </div>
     </div>
     <div class="card" data-id="6">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goten1.jpg" alt="Card 6">
+            </div>
             </div>
     </div>
     <div class="card" data-id="7">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/vegeta1.jpg" alt="Card 7">
+            </div>
             </div>
     </div>
     <div class="card" data-id="8">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/vegito1.jpg" alt="Card 8">
+            </div>
             </div>
     </div>
     <div class="card" data-id="1">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 1" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 1">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/gohan1.jpg" alt="Card 1">
+            </div>
             </div>
     </div>
     <div class="card" data-id="2">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku1.jpg" alt="Card 2">
+            </div>
             </div>
     </div>
     <div class="card" data-id="3">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku2.jpg" alt="Card 3">
+            </div>
             </div>
     </div>
     <div class="card" data-id="4">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku3.jpg" alt="Card 4">
+            </div>
             </div>
     </div>
     <div class="card" data-id="5">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goku4.jpg" alt="Card 5">
+            </div>
             </div>
     </div>
     <div class="card" data-id="6">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/goten1.jpg" alt="Card 6">
+            </div>
             </div>
     </div>
     <div class="card" data-id="7">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/vegeta1.jpg" alt="Card 7">
+            </div>
             </div>
     </div>
     <div class="card" data-id="8">
-        <div class="card-flip">
-            <div class="card-back">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8" class="card-back">
+        <div class="card-inner">
+            <div class="card-front">
+            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8">
             </div>
-            <div class="card-front"></div>
+            <div class="card-back">
+                <img src="assets/images/vegito1.jpg" alt="Card 8">
+            </div>
             </div>
     </div>
     </div>
