--- a/index.html
+++ b/index.html
@@ -7,179 +7,27 @@
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/eda0f92437.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/favicon.ico" type="image/png">
-   <title>Match Two Cards</title>
+
+ <title>Home Page</title>
+  <style>
+
+  </style>
 </head>
 <body>
-    <h1>Match Two Cards</h1>
 
-    <button id="ngb">New Game</button>
-    <div class="score-box">
-        Score: <spam id="score">0</spam>
-    </div>
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="gamepage.html">Start Game</a>
+  </div>
 
-    <div class="cardbox">
-       
-    <div class="card" data-id="1">
-        <div class="card-inner">
-        <div class="card-front">
-        <img src="assets/images/cardbacksideedit.jpg" alt="Card 1">
-        </div>
-        <div class="card-back">
-            <img src="assets/images/gohan1.jpg" alt="Card 1">
-        </div>
-        </div>
-       </div>
-    <div class="card" data-id="2">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku1.jpg" alt="Card 2">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="3">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku2.jpg" alt="Card 3">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="4">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku3.jpg" alt="Card 4">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="5">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku4.jpg" alt="Card 5">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="6">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goten1.jpg" alt="Card 6">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="7">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/vegeta1.jpg" alt="Card 7">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="8">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/vegito1.jpg" alt="Card 8">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="1">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 1">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/gohan1.jpg" alt="Card 1">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="2">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 2">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku1.jpg" alt="Card 2">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="3">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 3">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku2.jpg" alt="Card 3">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="4">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 4">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku3.jpg" alt="Card 4">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="5">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 5">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goku4.jpg" alt="Card 5">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="6">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 6">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/goten1.jpg" alt="Card 6">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="7">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 7">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/vegeta1.jpg" alt="Card 7">
-            </div>
-            </div>
-    </div>
-    <div class="card" data-id="8">
-        <div class="card-inner">
-            <div class="card-front">
-            <img src="assets/images/cardbacksideedit.jpg" alt="Card 8">
-            </div>
-            <div class="card-back">
-                <img src="assets/images/vegito1.jpg" alt="Card 8">
-            </div>
-            </div>
-    </div>
-    </div>
-<script src="game.js" defer></script>
+  <div style="padding:20px;">
+    <h1>Welcome to the Home Page</h1>
+    <p>This is your main page content.</p>
+  </div>
+
+    <script src="game.js" defer></script>
 </body>
-</html>
+
+
+
+
