Add css styles to intruduction page.

--- a/gamepage.html
+++ b/gamepage.html
@@ -10,11 +10,15 @@
    <title>Match Two Cards</title>
 </head>
 <body>
+    <div class="navbar">
+  <a href="index.html">Home</a>
+  <a href="gamepage.html">Start Game</a>
     <h1>Match Two Cards</h1>
+
 
     <button id="ngb">New Game</button>
     <div class="score-box">
-        Score: <spam id="score">0</spam>
+        Score: <span id="score">0</span>
     </div>
 
     <div class="cardbox">
@@ -178,6 +182,7 @@
                 <img src="assets/images/vegito1.jpg" alt="Card 8">
             </div>
             </div>
+    </div>
     </div>
     </div>
 <script src="game.js" defer></script>
