--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="icon" href="assets/images/favicon.ico" type="image/png">
 
  <title>Home Page</title>
-  <style>
-
-  </style>
 </head>
+
 <body>
 
   <div class="navbar">
@@ -20,9 +18,9 @@
     <a href="gamepage.html">Start Game</a>
   </div>
 
-  <div style="padding:20px;">
+  <div class="content">
     <h1>Welcome to the Home Page</h1>
-    <p>This is your main page content.</p>
+    <p>Text instructions</p>
   </div>
 
     <script src="game.js" defer></script>
