--- a/gamepage.html
+++ b/gamepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/game.css">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/eda0f92437.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/favicon.ico" type="image/png">
@@ -11,10 +11,15 @@
 </head>
 <body>
     <div class="navbar">
-  <a href="index.html">Home</a>
-  <a href="gamepage.html">Start Game</a>
+  <div class="title">
+  <img src="assets/images/dragonball-logo.png" alt="Dragon Ball Logo" class="logo">
     <h1>Match Two Cards</h1>
-
+    <div class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="#" id="openInstructions">Instructions</a>
+</div>
+</div>
+</div>
 
     <button id="ngb">New Game</button>
     <div class="score-box">
@@ -184,7 +189,13 @@
             </div>
     </div>
     </div>
-    </div>
 <script src="game.js" defer></script>
+<!-- Modal Container -->
+<div id="instructionsModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <iframe src="instructions.html" width="100%" height="400px" style="border: none;"></iframe>
+  </div>
+</div>
 </body>
 </html>
