--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 <body>
 
   <div class="navbar">
-    <img src="assets/images/dragonball-logo.png" alt="Dragon Ball Logo" class="logo">
+   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="gamepage.html">Start Game</a>
-    <a href="instructions.html">instructions</a>
+    <a href="instructions.html">Instructions</a>
   </div>
-
+  <div class="logo">
+ <img src="assets/images/dragonball-logo.png" alt="Dragon Ball Logo" class="logo">
+ </div>
+ </div>
   <div class="content">
     <h1>Welcome to the Home Page</h1>
     <p>Text instructions</p>
