--- a/index.html
+++ b/index.html
@@ -12,25 +12,23 @@
 </head>
 
 <body>
-
   <div class="navbar">
-   <div class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="gamepage.html">Start Game</a>
-    <a href="instructions.html">Instructions</a>
+    <div class="center-logo">
+      <img src="assets/images/dragonball-logo.png" alt="Dragon Ball Logo" class="logo">
+    </div>
+    
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="gamepage.html">Start Game</a>
+      <a href="instructions.html">Instructions</a>
+    </div>
   </div>
-  <div class="logo">
- <img src="assets/images/dragonball-logo.png" alt="Dragon Ball Logo" class="logo">
- </div>
- </div>
+
   <div class="content">
     <h1>Welcome to the Home Page</h1>
     <p>Text instructions</p>
   </div>
-
-    <script src="game.js" defer></script>
 </body>
-
 
 
 
