--- a/gamepage.html
+++ b/gamepage.html
@@ -202,7 +202,7 @@
 <div id="winModal" class="modal">
   <div class="modal-content">
     <span class="close-win">&times;</span>
-    <h2>Congratulations! You matched all cards</h2>
+    <h2>Congratulations! You matched all the cards!!!</h2>
     <button id="nextGame">Next Game</button>
   </div>
 </div>
