--- a/gamepage.html
+++ b/gamepage.html
@@ -29,13 +29,12 @@
         Flips: <span id="flips">0</span>
         <div id="timerDisplay">
   Time: <span id="timer">0</span>
-</div>
+        </div>
       </div>
       <button id="ngb">New Game</button>
     </div>
-
-    <div class="cardbox">
-       
+    <!-- Game Board -->
+    <div class="cardbox"> 
     <div class="card" data-id="1">
         <div class="card-inner">
         <div class="card-front">
