--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 
   <div class="content">
     <h1>Welcome to the Home Page</h1>
-    <p>Text instructions</p>
+    <p>Here are the instructions for the card matching game:</p>
+            <ul>
+                <li>Click on the cards to flip them.</li>
+                <li>Find matching pairs to earn points.</li>
+                <li>Try to finish as quickly as possible!</li>
+                <li>Click "New Game" to restart the game.</li>
+            </ul>
   </div>
 </body>
 
