Add css style to instruction on the main page, remouve instructions from navbar.

--- a/index.html
+++ b/index.html
@@ -20,20 +20,21 @@
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="gamepage.html">Start Game</a>
-      <a href="instructions.html">Instructions</a>
     </div>
   </div>
 
   <div class="content">
     <h1>Welcome to the Home Page</h1>
-    <p>Here are the instructions for the card matching game:</p>
-            <ul>
-                <li>Click on the cards to flip them.</li>
-                <li>Find matching pairs to earn points.</li>
-                <li>Try to finish as quickly as possible!</li>
-                <li>Click "New Game" to restart the game.</li>
-            </ul>
-  </div>
+  <div class="instructions-wrapper">
+  <div class="instructions">How to Play:</div>
+  <ul>
+    <li>Flip two cards at a time</li>
+    <li>Match all the pairs</li>
+    <li>Try to use the fewest flips!</li>
+    <li>Time is essence, so be quick!</li>
+    <li>Have fun!</li>
+  </ul>
+</div>
 </body>
 
 
