--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="content">
-    <h1>Welcome to the Home Page</h1>
+    <h1> Match Two Cards</h1>
   <div class="instructions-wrapper">
   <div class="instructions">How to Play:</div>
   <ul>
