Correct a missing close div on html game page.

--- a/gamepage.html
+++ b/gamepage.html
@@ -31,6 +31,7 @@
   Time: <span id="timer">0</span>
         </div>
       </div>
+      </div>
       <button id="ngb">New Game</button>
     </div>
     <!-- Game Board -->
@@ -225,7 +226,6 @@
 <div id="totalScoreDisplay">Total Score: 0</div>
 <!-- Display Games Won -->
 <div id="gamesWonDisplay">Games Won: 0</div>
-
 </div>
 </div>
 </body>
